--- a/Source/Teaching/Content/css/basicInfo.css
+++ b/Source/Teaching/Content/css/basicInfo.css
@@ -44,8 +44,8 @@ span {
 }
 
 .txt {
-    border: 1px solid #6A6775;
-    height: 23px;
+    border: 1px solid #AEACB8;
+    height: 30px;
 }
 
 .a {
